src/evcParser.py
# Generated from evc.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class evcParser ( Parser ):

    grammarFileName = "evc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "','", "'}'", "':'", "'='", 
                     "'('", "')'", "'->'", "'+='", "'-='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'alias'", "'animation'", 
                     "'bool'", "'break'", "'case'", "'command'", "'common'", 
                     "'const'", "'default'", "'else'", "'enum'", "'entry'", 
                     "'false'", "'flag'", "'float'", "'for'", "'from'", 
                     "'function'", "'if'", "'import'", "'int'", "'lock'", 
                     "'namespace'", "'str'", "'sysflag'", "'switch'", "'return'", 
                     "'talk'", "'true'", "'unless'", "'*'", "'with'", "'while'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "Comparator", "Comment", "BlockComment", 
                      "NUMBER", "EOL", "WS", "ALIAS", "ANIMATION", "BOOL", 
                      "BREAK", "CASE", "COMMAND", "COMMON", "CONST", "DEFAULT", 
                      "ELSE", "ENUM", "ENTRY", "FALSE", "FLAG", "FLOAT", 
                      "FOR", "FROM", "FUNCTION", "IF", "IMPORT", "INT", 
                      "LOCK", "NAMESPACE", "STR", "SYSFLAG", "SWITCH", "RETURN", 
                      "TALK", "TRUE", "UNLESS", "WILDCARD", "WITH", "WHILE", 
                      "ScopedIdentifier", "Identifier" ]

    RULE_prog = 0
    RULE_progEntry = 1
    RULE_import_ = 2
    RULE_fromImport = 3
    RULE_fromImportRhs = 4
    RULE_namespace = 5
    RULE_alias = 6
    RULE_aliasRh = 7
    RULE_enum = 8
    RULE_enumEntry = 9
    RULE_command = 10
    RULE_animation = 11
    RULE_animationBlock = 12
    RULE_function = 13
    RULE_functionSpecifier = 14
    RULE_funcArgList = 15
    RULE_funcArg = 16
    RULE_funcArgStorage = 17
    RULE_functionCall = 18
    RULE_funcCallArgList = 19
    RULE_funcCallArg = 20
    RULE_block = 21
    RULE_blockEntry = 22
    RULE_contextBlock = 23
    RULE_switchBlock = 24
    RULE_caseBlock = 25
    RULE_break = 26
    RULE_return = 27
    RULE_forBlock = 28
    RULE_whileBlock = 29
    RULE_variableDefinition = 30
    RULE_variableAssignment = 31
    RULE_variableRightHandAssignment = 32
    RULE_ifBlock = 33
    RULE_elseIfBlock = 34
    RULE_unlessBlock = 35
    RULE_elseBlock = 36
    RULE_ifExpr = 37
    RULE_number = 38
    RULE_string_ = 39
    RULE_comparatorLeft = 40
    RULE_comparatorRight = 41
    RULE_boolValue = 42
    RULE_assignmentOperator = 43
    RULE_type = 44

    ruleNames =  [ "prog", "progEntry", "import_", "fromImport", "fromImportRhs", 
                   "namespace", "alias", "aliasRh", "enum", "enumEntry", 
                   "command", "animation", "animationBlock", "function", 
                   "functionSpecifier", "funcArgList", "funcArg", "funcArgStorage", 
                   "functionCall", "funcCallArgList", "funcCallArg", "block", 
                   "blockEntry", "contextBlock", "switchBlock", "caseBlock", 
                   "break", "return", "forBlock", "whileBlock", "variableDefinition", 
                   "variableAssignment", "variableRightHandAssignment", 
                   "ifBlock", "elseIfBlock", "unlessBlock", "elseBlock", 
                   "ifExpr", "number", "string_", "comparatorLeft", "comparatorRight", 
                   "boolValue", "assignmentOperator", "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    STRING=12
    Comparator=13
    Comment=14
    BlockComment=15
    NUMBER=16
    EOL=17
    WS=18
    ALIAS=19
    ANIMATION=20
    BOOL=21
    BREAK=22
    CASE=23
    COMMAND=24
    COMMON=25
    CONST=26
    DEFAULT=27
    ELSE=28
    ENUM=29
    ENTRY=30
    FALSE=31
    FLAG=32
    FLOAT=33
    FOR=34
    FROM=35
    FUNCTION=36
    IF=37
    IMPORT=38
    INT=39
    LOCK=40
    NAMESPACE=41
    STR=42
    SYSFLAG=43
    SWITCH=44
    RETURN=45
    TALK=46
    TRUE=47
    UNLESS=48
    WILDCARD=49
    WITH=50
    WHILE=51
    ScopedIdentifier=52
    Identifier=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def progEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(evcParser.ProgEntryContext)
            else:
                return self.getTypedRuleContext(evcParser.ProgEntryContext,i)


        def getRuleIndex(self):
            return evcParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = evcParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90
                self.progEntry()
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4519935119720448) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(evcParser.FunctionContext,0)


        def animation(self):
            return self.getTypedRuleContext(evcParser.AnimationContext,0)


        def command(self):
            return self.getTypedRuleContext(evcParser.CommandContext,0)


        def enum(self):
            return self.getTypedRuleContext(evcParser.EnumContext,0)


        def alias(self):
            return self.getTypedRuleContext(evcParser.AliasContext,0)


        def variableDefinition(self):
            return self.getTypedRuleContext(evcParser.VariableDefinitionContext,0)


        def namespace(self):
            return self.getTypedRuleContext(evcParser.NamespaceContext,0)


        def import_(self):
            return self.getTypedRuleContext(evcParser.Import_Context,0)


        def fromImport(self):
            return self.getTypedRuleContext(evcParser.FromImportContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_progEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgEntry" ):
                listener.enterProgEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgEntry" ):
                listener.exitProgEntry(self)




    def progEntry(self):

        localctx = evcParser.ProgEntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_progEntry)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25, 30, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.function()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.animation()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.command()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.enum()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.alias()
                pass
            elif token in [21, 26, 32, 33, 39, 42, 43, 52]:
                self.enterOuterAlt(localctx, 6)
                self.state = 100
                self.variableDefinition()
                self.state = 101
                self.match(evcParser.T__0)
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 7)
                self.state = 103
                self.namespace()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self.import_()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 9)
                self.state = 105
                self.fromImport()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(evcParser.IMPORT, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def getRuleIndex(self):
            return evcParser.RULE_import_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_" ):
                listener.enterImport_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_" ):
                listener.exitImport_(self)




    def import_(self):

        localctx = evcParser.Import_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(evcParser.IMPORT)
            self.state = 109
            self.match(evcParser.Identifier)
            self.state = 110
            self.match(evcParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromImportContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(evcParser.FROM, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def IMPORT(self):
            return self.getToken(evcParser.IMPORT, 0)

        def fromImportRhs(self):
            return self.getTypedRuleContext(evcParser.FromImportRhsContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_fromImport

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromImport" ):
                listener.enterFromImport(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromImport" ):
                listener.exitFromImport(self)




    def fromImport(self):

        localctx = evcParser.FromImportContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_fromImport)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(evcParser.FROM)
            self.state = 113
            self.match(evcParser.Identifier)
            self.state = 114
            self.match(evcParser.IMPORT)
            self.state = 115
            self.fromImportRhs()
            self.state = 116
            self.match(evcParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromImportRhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(evcParser.Identifier)
            else:
                return self.getToken(evcParser.Identifier, i)

        def WILDCARD(self):
            return self.getToken(evcParser.WILDCARD, 0)

        def getRuleIndex(self):
            return evcParser.RULE_fromImportRhs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromImportRhs" ):
                listener.enterFromImportRhs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromImportRhs" ):
                listener.exitFromImportRhs(self)




    def fromImportRhs(self):

        localctx = evcParser.FromImportRhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_fromImportRhs)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(evcParser.T__1)
                self.state = 119
                self.match(evcParser.Identifier)
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 120
                    self.match(evcParser.T__2)
                    self.state = 121
                    self.match(evcParser.Identifier)
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                self.match(evcParser.T__3)
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(evcParser.Identifier)
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(evcParser.WILDCARD)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMESPACE(self):
            return self.getToken(evcParser.NAMESPACE, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def progEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(evcParser.ProgEntryContext)
            else:
                return self.getTypedRuleContext(evcParser.ProgEntryContext,i)


        def getRuleIndex(self):
            return evcParser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)




    def namespace(self):

        localctx = evcParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(evcParser.NAMESPACE)
            self.state = 133
            self.match(evcParser.Identifier)
            self.state = 134
            self.match(evcParser.T__1)
            self.state = 136 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 135
                self.progEntry()
                self.state = 138 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4519935119720448) != 0)):
                    break

            self.state = 140
            self.match(evcParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALIAS(self):
            return self.getToken(evcParser.ALIAS, 0)

        def COMMAND(self):
            return self.getToken(evcParser.COMMAND, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def number(self):
            return self.getTypedRuleContext(evcParser.NumberContext,0)


        def aliasRh(self):
            return self.getTypedRuleContext(evcParser.AliasRhContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_alias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlias" ):
                listener.enterAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlias" ):
                listener.exitAlias(self)




    def alias(self):

        localctx = evcParser.AliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_alias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(evcParser.ALIAS)
            self.state = 143
            self.match(evcParser.COMMAND)
            self.state = 144
            self.match(evcParser.Identifier)
            self.state = 145
            self.match(evcParser.T__4)
            self.state = 146
            self.number()
            self.state = 147
            self.match(evcParser.T__5)
            self.state = 148
            self.aliasRh()
            self.state = 149
            self.match(evcParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AliasRhContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def getRuleIndex(self):
            return evcParser.RULE_aliasRh

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliasRh" ):
                listener.enterAliasRh(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliasRh" ):
                listener.exitAliasRh(self)




    def aliasRh(self):

        localctx = evcParser.AliasRhContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_aliasRh)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(evcParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(evcParser.ENUM, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def enumEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(evcParser.EnumEntryContext)
            else:
                return self.getTypedRuleContext(evcParser.EnumEntryContext,i)


        def getRuleIndex(self):
            return evcParser.RULE_enum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum" ):
                listener.enterEnum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum" ):
                listener.exitEnum(self)




    def enum(self):

        localctx = evcParser.EnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(evcParser.ENUM)
            self.state = 154
            self.match(evcParser.Identifier)
            self.state = 155
            self.match(evcParser.T__1)
            self.state = 156
            self.enumEntry()
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 157
                self.match(evcParser.T__2)
                self.state = 158
                self.enumEntry()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.match(evcParser.T__0)
            self.state = 165
            self.match(evcParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnumEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def number(self):
            return self.getTypedRuleContext(evcParser.NumberContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_enumEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumEntry" ):
                listener.enterEnumEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumEntry" ):
                listener.exitEnumEntry(self)




    def enumEntry(self):

        localctx = evcParser.EnumEntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enumEntry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(evcParser.Identifier)
            self.state = 168
            self.match(evcParser.T__5)
            self.state = 169
            self.number()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMAND(self):
            return self.getToken(evcParser.COMMAND, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def funcArgList(self):
            return self.getTypedRuleContext(evcParser.FuncArgListContext,0)


        def number(self):
            return self.getTypedRuleContext(evcParser.NumberContext,0)


        def type_(self):
            return self.getTypedRuleContext(evcParser.TypeContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = evcParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_command)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(evcParser.COMMAND)
            self.state = 172
            self.match(evcParser.Identifier)
            self.state = 173
            self.match(evcParser.T__6)
            self.state = 174
            self.funcArgList()
            self.state = 175
            self.match(evcParser.T__7)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 176
                self.match(evcParser.T__8)
                self.state = 177
                self.type_()


            self.state = 180
            self.match(evcParser.T__4)
            self.state = 181
            self.number()
            self.state = 182
            self.match(evcParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnimationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANIMATION(self):
            return self.getToken(evcParser.ANIMATION, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def animationBlock(self):
            return self.getTypedRuleContext(evcParser.AnimationBlockContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_animation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnimation" ):
                listener.enterAnimation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnimation" ):
                listener.exitAnimation(self)




    def animation(self):

        localctx = evcParser.AnimationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_animation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(evcParser.ANIMATION)
            self.state = 185
            self.match(evcParser.Identifier)
            self.state = 186
            self.match(evcParser.T__1)
            self.state = 187
            self.animationBlock()
            self.state = 188
            self.match(evcParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnimationBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(evcParser.FunctionCallContext)
            else:
                return self.getTypedRuleContext(evcParser.FunctionCallContext,i)


        def getRuleIndex(self):
            return evcParser.RULE_animationBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnimationBlock" ):
                listener.enterAnimationBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnimationBlock" ):
                listener.exitAnimationBlock(self)




    def animationBlock(self):

        localctx = evcParser.AnimationBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_animationBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 190
                self.functionCall()
                self.state = 191
                self.match(evcParser.T__0)
                self.state = 195 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==52 or _la==53):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(evcParser.FUNCTION, 0)

        def Identifier(self):
            return self.getToken(evcParser.Identifier, 0)

        def funcArgList(self):
            return self.getTypedRuleContext(evcParser.FuncArgListContext,0)


        def block(self):
            return self.getTypedRuleContext(evcParser.BlockContext,0)


        def functionSpecifier(self):
            return self.getTypedRuleContext(evcParser.FunctionSpecifierContext,0)


        def type_(self):
            return self.getTypedRuleContext(evcParser.TypeContext,0)


        def getRuleIndex(self):
            return evcParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):
